src/App.css
* {
  font-family: 'DejaVu Serif';
  --ranger-primary: #8ea53a;
  --dh-primary: #69CCE7;
  --war-primary: #CF8D21;
  --custom-dark: rgba(37,39,37,0.8);
  --custom-dark-opaque: rgb(37,39,37);
  --bg-dark: rgba(28,30,27,0.9);
  color: white;
}

.navbar {
  display: flex;
  align-items: center;
}

.nav-center {
  width: 90%;

}

.nav-row {
  display: flex;
  justify-content: space-around;
  margin: 0;
}

.druid-page {
  background-image: url("./assets/backgrounds/druid.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  min-height: 100vh;
}
.warrior-page {
  background-image: url("./assets/backgrounds/warrior.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  min-height: 100vh;
}

span[data-armory-size="20"] {
  display: inline-block;
  transform: translate(0,-2px);
}

img {
  transform: translate(0,-1px);
}

.vertical-text {
  writing-mode: vertical-rl;
  text-orientation: mixed;
}

.flip {
  transform: rotate(180deg);
}

.clockwise {
  transform: rotate(90deg) translate(0, -4px);
}

.gw2a--10x8O {
  display: flex;
  align-items: center;
  position: relative;
  height: 140px;
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;
}
.dragonhunter .gw2a--M9jBV :first-child, .dh-trait-intro :first-child{
  color: var(--dh-primary);
}
.dragonhunter .gw2a--M9jBV a:hover, .dh-trait-intro a:hover {
  text-decoration-color: var(--dh-primary);
}

.gw2a--t1hk1 {
  position: absolute;
  background-position: bottom left;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.4;
  background-position-x: -118px;
}

.fake-button {
  cursor: pointer;
}
.dhlink {
  color: var(--dh-primary);
}
.dhlink:hover {
  color: var(--dh-primary);
  text-decoration-color: var(--dh-primary);
}
/* Container (Taken from Bootstrap) */

.guide-content {
  width:100%;
  padding-right:15px;
  padding-left:15px;
  margin-right:auto;
  margin-left:auto;
  background-color: var(--bg-dark);
}
@media (min-width:576px) {
  .guide-content {
    max-width:540px
  }
}
@media (min-width:768px) {
  .guide-content {
    max-width:720px
  }
}
@media (min-width:992px) {
  .guide-content {
    max-width:960px
  }
}
@media (min-width:1200px) {
  .guide-content {
    max-width:1140px
  }
}
.guide-content.ranger {
  border-top: 4px solid var(--ranger-primary);
}
.guide-content.warrior {
  border-top: 4px solid var(--war-primary);
}

/* Nav Tabs */

nav.custom-nav {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}

nav.custom-nav a {
  color: white;
  border-bottom: 1px solid #dee2e6;
  border-radius: 0;
  text-align: center;
  display: block;
  padding: .5rem 1rem;
  flex: 1 1 auto;
}

nav.custom-nav a.active {
  color: var(--ranger-primary);
  text-decoration: underline;
  background-color: var(--custom-dark);
  border: 1px solid #dee2e6;
  border-bottom: 1px transparent;
}

nav.custom-nav.dragonhunter a.active {
  color: var(--dh-primary);
}
nav.custom-nav.warrior a.active {
  color: var(--war-primary);
}

.custom-tab-content {
  background-color: var(--custom-dark);
  border: 1px solid #dee2e6;
  border-top: 0px solid;
  padding: 2em;
}

.custom-tab-content {
  background-color: var(--custom-dark);
  border: 1px solid #dee2e6;
  border-top: 0px solid;
  padding: 2em;
}

/* Cards */

.title-card {
  border-radius: 0;
  border: 2px solid white;
  background-color: black;
  padding: 1.5em 3em 1.5em 3em;
  margin: 3em 0 3em 0;
}
.title-card > .title {
  font-size: 1.25em;
  font-style: italic;
}
.title-card > .title > footer {
  display: block;
  font-size: 80%;
  color: #6c757d;
}

.trait-card, .trait-card-2, .boss-card {
  background: transparent;
  border: 0px transparent;
  margin-top: 25px;
  margin-bottom: 2em;
  position: relative;
}
.trait-card > .trait-name {
  background: transparent;
  align-items: center;
  width: 100%;
  border: 0;
  padding: 0;
  position: absolute;
  top: -21px;
  z-index: 5;
  display: flex;
  flex-direction: row;
}
.boss-card > .boss-name {
  background: transparent;
  align-items: center;
  width: 100%;
  border: 0;
  padding: 0;
  position: absolute;
  top: -20px;
  z-index: 5;
  display: flex;
  flex-direction: row;
  margin-right: 1em,
}
.trait-card > .trait-name > .filler,
.boss-card > .boss-name > .filler {
  border-top: 1px solid rgba(200, 200, 200, 0.5);
  flex-grow: 1;
}
.trait-card > .trait-name > span, .boss-name-details {
  margin-right: 1em;
}
.boss-name-details {
  margin-left: 5px;
}
.trait-card > .trait-description, .boss-card > .boss-description {
  margin-left: 25px;
  padding: 1.5em 1.25rem 0 1.25rem;
  border-right: 1px solid rgba(200, 200, 200, 0.5);
  position: relative;
  display: block;
  overflow: hidden;
  z-index: 999;
}
.trait-card > .trait-description > *, .boss-card > .boss-description > * {
  position: relative;
  z-index: 999;
}
.trait-card > .trait-description:after,
.trait-card > .trait-description:before,
.boss-card > .boss-description:after,
.boss-card > .boss-description:before
 {
  position: absolute;
  content: '';
  z-index: 0;
}
.trait-card > .trait-description:before
.boss-card > .boss-description:before {
  width: 80%;
  right: 0px;
  top: 0px;
  border: 1px solid rgba(200, 200, 200, 0.5);
  border-width: 0px 1px 0px 0px;
}
.trait-card > .trait-description:after,
.boss-card > .boss-description:after {
  height: calc(100% - (0.5em + 21px));
  width: 100%;
  bottom: 0px;
  left: 0px;
  border: 1px solid rgba(200, 200, 200, 0.5);
  border-width: 0px 0px 1px 1px;
}
/* Copy Template area */
.copy-template {
  display: flex;
  padding-left: 5%;
  padding-right: 5%
}
.copy-template form {
  display: flex;
  width: 100%;
}
.copy-template-name {
  font-weight: bold;
  padding: 7px 0;
  height: 38px;
  width: 120px;
  margin-right: 20px;
  text-align: center;
}
.copy-template-message {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 20px;
  padding-bottom: 20px;
}
.copy-template-button {
  background-color: aquamarine;
  font-weight: bold;
  padding: 7px 20px;
  border: none;
  outline: none;
  transition: 0.2s;
  cursor: pointer;
  margin-bottom: 10px;
  height: 38px;
  width: 170px;
}
.copy-template-button.dragonhunter {
  background-color: var(--dh-primary);
}
.copy-template-button:hover {
  box-shadow: inset 0 0 5px black;
}
.copy-template-area {
  background-color: var(--bg-dark);
  padding: 7px 20px;
  border: none;
  height: 38px;
  width: 100%;
}

/* Sections */

.section-title {
  margin-top: 3em;
  margin-bottom: 2em;
  padding: 0.25rem 0 0.25rem 0;
  background-color: rgba(0, 0, 0, 0.8);
}
.section-title > h3 {
  margin: 0;
}
.section-title.ranger {
  border-top: 2px solid var(--ranger-primary);
  border-bottom: 2px solid var(--ranger-primary);
}
.section-title.warrior {
  border-top: 2px solid var(--war-primary);
  border-bottom: 2px solid var(--war-primary);
}

.subsection-title {
  padding: 0.5em;
  border-left: 1px solid var(--ranger-primary);
  background-color: var(--custom-dark);
  margin-left: 1em;
}

.section-intro {
  font-style: italic;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}
@media (min-width: 992px) {
  .section-intro {
    -ms-flex: 0 0 75%;
    flex: 0 0 75%;
    max-width: 75%;
  }
}

/* Misc */

.centered-flex-row {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

/* Video */
@keyframes modal-video {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

@keyframes modal-video-inner {
	from {
		transform: translate(0, 100px);
	}

	to {
		transform: translate(0, 0);
	}
}

.modal-video {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, .8);
	z-index: 1000000;
	cursor: pointer;
	opacity: 1;
	animation-timing-function: ease-out;
	animation-duration: .3s;
	animation-name: modal-video;
	-webkit-transition: 1 .3s ease-out;
	-moz-transition: 1 .3s ease-out;
	-ms-transition: 1 .3s ease-out;
	-o-transition: 1 .3s ease-out;
	transition: 1 .3s ease-out;;
}

.modal-video-effect-exit {
	opacity: 0;
}

.modal-video-movie-wrap {
  -webkit-transform: translate(0, 100px);
  -moz-transform: translate(0, 100px);
  -ms-transform: translate(0, 100px);
  -o-transform: translate(0, 100px);
  transform: translate(0, 100px);
}
.modal-video-body {
	max-width: 1200px;
	width: 100%;
	height: 100%;
	margin: 0 auto;
	display: table;
}

.modal-video-inner {
	display: table-cell;
	vertical-align: middle;
	width: 100%;
	height: 100%;
}

.modal-video-movie-wrap {
	width: 100%;
	height: 0;
	position: relative;
	padding-bottom: 56.25%;
	background-color: #333;
	animation-timing-function: ease-out;
	animation-duration: .3s;
	animation-name: modal-video-inner;
	-webkit-transform: translate(0, 0);
	-moz-transform: translate(0, 0);
	-ms-transform: translate(0, 0);
	-o-transform: translate(0, 0);
	transform: translate(0, 0);
	-webkit-transition: -webkit-transform .3s ease-out;
	-moz-transition: -moz-transform .3s ease-out;
	-ms-transition: -ms-transform .3s ease-out;
	-o-transition: -o-transform .3s ease-out;
	transition: transform .3s ease-out;
}

.modal-video-movie-wrap iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.modal-video-close-btn {
	position: absolute;
	z-index: 2;
	top: -35px;
	right: -35px;
	display: inline-block;
	width: 35px;
	height: 35px;
	overflow: hidden;
	border: none;
	background: transparent;
}

.modal-video-close-btn::before {
  transform: rotate(45deg);
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  top: 50%;
  left: 0;
  margin-top: -1px;
  background: #fff;
  border-radius: 5px;
  margin-top: -6px;
}

.modal-video-close-btn::after {
  transform: rotate(-45deg);
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  top: 50%;
  left: 0;
  margin-top: -1px;
  background: #fff;
  border-radius: 5px;
  margin-top: -6px;
}

